# Tiger

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  book.txt  build.sh  compile_commands.json  syntax.md
docs/: build-systems-guide.md  cheatsheet.md  progress.md  quiz.md  study-guide.md
docs/exercises/: README.md
docs/exercises/01-shell-scripting/: 01_variables_exercise.sh  01_variables_solution.sh  02_conditionals_exercise.sh  02_conditionals_solution.sh  03_loops_exercise.sh  03_loops_solution.sh  04_functions_exercise.sh  04_functions_solution.sh  05_getopts_exercise.sh  05_getopts_solution.sh  README.md
docs/exercises/02-cmake/: README.md
docs/exercises/02-cmake/01-basic/: CMakeLists_exercise.txt  CMakeLists_solution.txt  main.cpp
docs/exercises/02-cmake/02-library/: CMakeLists_exercise.txt  CMakeLists_solution.txt
docs/exercises/02-cmake/02-library/lib/: math_utils.cpp  math_utils.hpp
docs/exercises/02-cmake/02-library/src/: main.cpp
docs/exercises/03-lexer/: 01_token_types_exercise.cpp  01_token_types_solution.cpp  02_scan_identifier_exercise.cpp  02_scan_identifier_solution.cpp  README.md
docs/exercises/04-parser/: 01_token_handling_exercise.cpp  01_token_handling_solution.cpp  02_precedence_exercise.cpp  02_precedence_solution.cpp  README.md
docs/exercises/05-ast/: 01_basic_nodes_exercise.cpp  01_basic_nodes_solution.cpp  README.md
examples/: loops.tig  records.tig  test.tig
src/: ast.hpp  ast_printer.cpp  ast_printer.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/env/: EnvTable.c  EnvTable.cpp  EnvTable.h  EnvTable.hpp  symbol.c  symbol.cpp  symbol.h  symbol.hpp  symbol_test.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp
src/parser/: AST.hpp  Parser.cpp  Parser.hpp
src/util/: ASTPrinter.cpp  ASTPrinter.hpp  util.hpp
tests/: CMakeLists.txt  basic.tig  target.sh  test_env_table.cpp
